{
    "name": "WaveInput",
    "maps": [
        {
            "name": "WaveController",
            "id": "c7ddc4ea-e789-4ecc-878b-d98f3170e996",
            "actions": [
                {
                    "name": "BeatMultiplier",
                    "type": "Value",
                    "id": "4efad281-c968-4bf4-a919-b388974f0790",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BandSelector",
                    "type": "Button",
                    "id": "a54fef2f-ebca-4293-acb6-fac92d7e0505",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowHideUi",
                    "type": "Button",
                    "id": "eca41a62-f6ee-4e92-93ac-c4ef7440e102",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TakeScreenShot",
                    "type": "Button",
                    "id": "1eeeb2b4-4f52-4bbc-96b2-81219f0183bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeColor",
                    "type": "Button",
                    "id": "c38f4a69-d3f4-4b52-b5ed-1e4f5403bf5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5bfc98a6-8619-41e8-ba9d-807ab29ef513",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "BeatMultiplier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Selector",
                    "id": "04fa18ec-702d-4d74-b319-b00f2c658bd4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BandSelector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "65b1cbfc-aeb4-4b52-8f89-1af183df5ffa",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BandSelector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5823e39d-d473-43d0-b111-acec5ef17ddd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BandSelector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "09d10424-3ace-4f5c-8565-17de5a501320",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHideUi",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99bd4d80-a40d-427e-9de0-e94d7de872cd",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeScreenShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83f10919-5ae3-41fa-9d05-7a3171e5305f",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}